fix: icon not showing

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -8,6 +8,11 @@
   --light-blue: #182028;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .text-white {
   color: white;
 }
